--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asserment One</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
-    
+    <!-- Header start -->
+
+    <header>
+      <div class="header-part">
+        <h1>
+          Let's Help Those Who Are<br />
+          More In Need
+        </h1>
+        <p>
+          Support our MISSION to bring early treatment resources for COVID <br> and
+          other illnesses free or low cost to the publi.
+        </p>
+        <a href="#">Donate Now</a>
+      </div>
+    </header>
+
+    <!-- Header end -->
   </body>
 </html>
