donate today add

--- a/index.html
+++ b/index.html
@@ -14,18 +14,38 @@
 
     <header>
       <div class="header-part">
-        <h1>
-          Let's Help Those Who Are<br />
-          More In Need
-        </h1>
+        <h1>Let's Help Those Who Are<br />More In Need</h1>
         <p>
-          Support our MISSION to bring early treatment resources for COVID <br> and
-          other illnesses free or low cost to the publi.
+          Support our MISSION to bring early treatment resources for COVID
+          <br />
+          and other illnesses free or low cost to the publi.
         </p>
         <a href="#">Donate Now</a>
       </div>
     </header>
 
     <!-- Header end -->
+
+    <!-- Donate Today section start -->
+
+    <section class="donate-today">
+      <h1>Donate Today</h1>
+      <p>
+        You may wish to make a Memorial gift in memory of a loved one, or in
+        Honor of<br />
+        someone. You also have the option to direct.
+      </p>
+      <div class="donate-many">
+        <h1>100$</h1>
+        <h1>200$</h1>
+        <h1>500$</h1>
+        <h1>1000$</h1>
+        <h1>5000$</h1>
+      </div>
+      <input type="text" placeholder="Other Amount (Taka)" />
+      <a href="#">Donate Now</a>
+    </section>
+
+    <!-- Donate Today section end -->
   </body>
 </html>
