donate today add end

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </p>
       <div class="donate-many">
         <h1>100$</h1>
-        <h1>200$</h1>
+        <h1 class="donate-active">200$</h1>
         <h1>500$</h1>
         <h1>1000$</h1>
         <h1>5000$</h1>
