--- a/index.html
+++ b/index.html
@@ -47,5 +47,41 @@
     </section>
 
     <!-- Donate Today section end -->
+
+    <!-- Donate Plan start -->
+    <div class="donate-plan">
+      <h1>Our Donate Plan</h1>
+      <p>
+        To keep you abreast of updates in all our programs, your Email address
+        will be <br />entered in our Subscriber Database. You may time.
+      </p>
+      <div class="donate-card">
+        <div class="card1">
+          <img src="./icons/food.png" alt="" />
+          <h1>Food for a famile</h1>
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit.
+          </p>
+        </div>
+        <div class="card2">
+          <img src="./icons/shelter.png" alt="" />
+          <h1>Shelter for a family</h1>
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit.
+          </p>
+        </div>
+        <div class="card3">
+          <img src="./icons/Frame-1.png" alt="" />
+          <h1>Education for a child</h1>
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- Donate Plan end -->
   </body>
 </html>
