--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asserment One</title>
     <link rel="stylesheet" href="style.css" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
@@ -83,5 +84,14 @@
       </div>
     </div>
     <!-- Donate Plan end -->
+
+    <!-- footer  start -->
+
+    <footer class="footer">
+      <h1>Be Humble</h1>
+      <p>I'm gonna do it</p>
+    </footer>
+
+    <!-- footer  end -->
   </body>
 </html>
