--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asserment One</title>
     <link rel="stylesheet" href="style.css" />
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
@@ -84,6 +84,24 @@
       </div>
     </div>
     <!-- Donate Plan end -->
+
+    <!-- Get My Updates start -->
+
+    <form action="">
+      <div class="my-update">
+        <h1>Get My Update</h1>
+        <p>
+          to direct your gift Where Needed Most, to designate your gift for one
+          of our core initiatives. <br />Select one of these options from our
+        </p>
+        <div class="input">
+          <input type="email" placeholder="Email" />
+          <a href="">Subscribe</a>
+        </div>
+      </div>
+    </form>
+
+    <!-- Get My Updates end -->
 
     <!-- footer  start -->
 
