--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
     </div>
     <!-- Donate Plan end -->
 
+    <!-- card start  -->
+<div class="card-section"></div>
+    <!-- card end  -->
+
     <!-- Get My Updates start -->
 
     <form action="">
