--- a/index.html
+++ b/index.html
@@ -86,7 +86,24 @@
     <!-- Donate Plan end -->
 
     <!-- card start  -->
-<div class="card-section"></div>
+    <div class="card-section">
+      <div class="card-one">
+        <img src="./images/donation1.jpg" alt="" />
+      </div>
+      <div class="card-two">
+        <h1>They need us <br />to suvive</h1>
+        <p>
+          To keep you abreast of updates in all our programs your Email address
+          <br />will be entered in our Subscriber Database<br />managed by
+          MailChimp. You may unsubscribe at any time.
+        </p>
+        <p>
+          To keep you abreast of updates in all our programs, your Email address
+          will be entered in our.
+        </p>
+        <a href="#">How To Contribute</a>
+      </div>
+    </div>
     <!-- card end  -->
 
     <!-- Get My Updates start -->
